v2/deploy-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
  namespace: beltexam2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: 557701857917.dkr.ecr.ap-southeast-2.amazonaws.com/my-node-api-image
          ports:
            - containerPort: 3000
