v2/deploy-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
  namespace: beltexam2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui-container
          image: 557701857917.dkr.ecr.ap-southeast-2.amazonaws.com/my-website-image
          ports:
            - containerPort: 80
