v2/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: beltexam2
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
