v2/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: beltexam2
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
