v2/service-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: beltexam2
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
