v2/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: beltexam2
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 81
