v2/ingress-ui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: beltexam2
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui-service
              port:
                number: 80
